<resources>
    <string name="app_name">Contact List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Enter Email</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="button_login">Login</string>
    <string name="signUp_login">Create account</string>
    <string name="recover_password">Forget password? Contact your admin</string>
    <string name="sign_up">Sign up</string>
</resources>